--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </header>
     <div class="container-fluid px-5">
 
-      <div class="row time-block past">
-        <div class="col-2 col-md-1 hour text-center py-3">8AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
+      <div class="row time-block hide">
+        <div class="col-2 col-md-1 hour text-center py-3 hide"></div>
+        <textarea class="col-8 col-md-10 description hide" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1 hide" aria-label="save">
+          <i class="fas fa-save hide" aria-hidden="true"></i>
         </button>
       </div>
 
